bugfix (not perfect) of css columns woth gatsby-image on mobile

--- a/src/components/PreviewCard/module.PreviewCard.scss
+++ b/src/components/PreviewCard/module.PreviewCard.scss
@@ -17,6 +17,11 @@
     flex-direction: column;
     position: relative;
     cursor: pointer;
+    @media (max-width: 768px) {
+      .gatsby-image-wrapper {
+        overflow: visible !important;
+      }
+    }
     .detail.withAtts {
       opacity: 1;
       padding-bottom: 15px;
